yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
        - name: app
          image: gaskin23/nodeappmongo:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
