yaml/nodeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-svc
spec:
  selector:
    app: nodeapp
  ports:
    - port: 80
      targetPort: 80
