yaml/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    name: web
    app: nodeapp
spec:
  selector:
    name: web 
  type: NodePort
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
     nodePort: 30001
