yaml/nodeingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
  labels:
    app: nodeapp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gokhanaskin.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nodeapp-svc
            port: 
              number: 80
